--- a/src/donight/web/client/app/skeleton/skeleton.jade
+++ b/src/donight/web/client/app/skeleton/skeleton.jade
@@ -1,7 +1,7 @@
 nav.navbar.navbar-default(role='navigation')
     .container
-        .navbar-header
-            button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar-items', aria-expanded='false')
+        .navbar-header.pull-right
+            //button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#navbar-items', aria-expanded='false')
                 span.sr-only Toggle navigation
                 span.icon-bar
                 span.icon-bar
@@ -9,16 +9,16 @@ nav.navbar.navbar-default(role='navigation')
 
             a.navbar-brand(href='/')
                 i.fa.fa-calendar
-                |  Donight 
+                |  Donight
 
-        #navbar-items.collapse.navbar-collapse
+        //#navbar-items.collapse.navbar-collapse
             ul.nav.navbar-nav
                 li
-                    a(ui-sref="home")
-                        i.fa Home
-                li
                     a(ui-sref="events")
-                        i.fa Events
+                        i.fa אירועים
+                li
+                    a(ui-sref="home")
+                        i.fa בית
 
 .container
     div#wrapper(ui-view)
