--- a/src/donight/web/client/app/index.jade
+++ b/src/donight/web/client/app/index.jade
@@ -35,7 +35,11 @@ html(lang="en", ng-app="donight")
 
         +script("/static/bower_components/underscore/underscore-min.js")
 
-        +script("/static/bower_components/angular-smart-table/dist/smart-table.min.js")
+        +script("/static/bower_components/moment/min/moment.min.js")
+        +script("/static/bower_components/moment/locale/he.js")
+        +script("/static/bower_components/angular-moment/angular-moment.js")
+
+        +script("/static/bower_components/angular-read-more/dist/readmore.min.js")
 
         +style("/static/build/app.css")
         +script("/static/build/app.js")
