--- a/src/donight/web/client/app/events/events.styl
+++ b/src/donight/web/client/app/events/events.styl
@@ -1,5 +1,2 @@
-#chat-panel
-  width 500px
-  margin-left auto
-  margin-right auto
-  margin-top 50px
+a.navbar-brand
+    border-bottom-color transparent !important
