--- a/src/donight/web/client/app/events/events.jade
+++ b/src/donight/web/client/app/events/events.jade
@@ -1,30 +1,31 @@
-div(ng-repeat="event in eventsVm.events")
+div(ng-repeat="event in eventsVm.filteredEvents(eventsVm.events)")
     .row
-        .col-xs-12
+        .col.s12
             h4
-                a(ng-href="{{ event.url }}", target="_blank") {{ event.title }}
+                a.teal-text(ng-href="{{ event.url }}", target="_blank") {{ event.title }}
 
     .row
-        .col-xs-12.col-md-4.pull-right
-            .col-xs-3.pull-right
+        .col.s12.m4.push-m8
+            .col.s3.push-s9
                 p איפה:
-            .col-xs-9.pull-right
+            .col.s9.pull-s3
                 p {{ event.location }}
-        .col-xs-12.col-md-4.pull-right
-            .col-xs-3.pull-right
+        .col.s12.m4
+            .col.s3.push-s9
                 p מתי:
-            .col-xs-9.pull-right
+            .col.s9.pull-s3
                 p {{ event.start_time | amCalendar:Date():{'sameElse': 'MM/DD/YYYY בשעה HH:mm'} }}
-        .col-xs-12.col-md-4.pull-right
-            .col-xs-3.pull-right
+        .col.s12.m4.pull-m8
+            .col.s3.push-s9
                 p מחיר:
-            .col-xs-9.pull-right
+            .col.s9.pull-s3
                 p {{ eventsVm.priceDisplay(event) }}
 
     .row
-        .col-xs-12.col-md-9.bottom-margin.pull-right
-            hm-read-more(hm-text="{{ event.description }}", hm-limit="200", hm-more-text="קרא עוד", hm-less-text="פחות")
-        .col-xs-12.col-md-3.bottom-margin.pull-right
-            img.img-rounded.img-responsive(ng-src="{{ event.image }}")
+        .col.s12.m9.push-m3
+            hm-read-more(hm-text="{{ event.description }}", hm-limit="200",
+                hm-more-text="קרא עוד", hm-less-text="פחות", hm-link-class="teal-text")
+        .col.s12.m3.pull-m9
+            img.img-rounded.responsive-img(ng-src="{{ event.image }}")
 
 
