--- a/src/donight/web/client/app/index.jade
+++ b/src/donight/web/client/app/index.jade
@@ -5,20 +5,25 @@ doctype html
 html(lang="en", ng-app="donight")
     head
         meta(charset="utf-8")
-        link(rel="shortcut icon", href="/static/images/favicon.ico")
-        title  Donight 
+        title  Donight
         
         base(href="/")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(name="description", content="Search Stuff")
         meta(name="author", content="cookiecutter.email")
 
-        +script("/static/bower_components/jQuery/dist/jquery.min.js")
+        link(rel="apple-touch-icon", sizes="180x180", href="/static/icons/apple-touch-icon.png")
+        link(rel="icon", type="image/png", href="/static/icons/favicon-32x32.png", sizes="32x32")
+        link(rel="icon", type="image/png", href="/static/icons/favicon-16x16.png", sizes="16x16")
+        link(rel="manifest", href="/static/icons/manifest.json")
+        link(rel="mask-icon", href="/static/icons/safari-pinned-tab.svg", color="#9c27b0")
+        link(rel="shortcut icon", href="/static/icons/favicon.ico")
+        meta(name="apple-mobile-web-app-title", content="Donight")
+        meta(name="application-name", content="Donight")
+        meta(name="msapplication-config", content="/static/icons/browserconfig.xml")
+        meta(name="theme-color", content="#9c27b0")
 
-        +style("/static/bower_components/bootstrap/dist/css/bootstrap.min.css")
-        +style("/static/bower_components/bootstrap/dist/css/bootstrap-theme.min.css")
-        +script("/static/bower_components/bootstrap/dist/js/bootstrap.min.js")
-        +style("/static/bower_components/bootstrap-rtl/dist/css/bootstrap-rtl.css")
+        +script("/static/bower_components/jQuery/dist/jquery.min.js")
 
         +style("/static/bower_components/font-awesome/css/font-awesome.min.css")
 
@@ -28,7 +33,6 @@ html(lang="en", ng-app="donight")
         +script("/static/bower_components/angular-sanitize/angular-sanitize.min.js")
 
         +script("/static/bower_components/angular-ui-router/release/angular-ui-router.min.js")
-        +script("/static/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js")
 
         +style("/static/bower_components/angular-ui-select/dist/select.min.css")
         +script("/static/bower_components/angular-ui-select/dist/select.min.js")
@@ -40,6 +44,11 @@ html(lang="en", ng-app="donight")
         +script("/static/bower_components/angular-moment/angular-moment.js")
 
         +script("/static/bower_components/angular-read-more/dist/readmore.min.js")
+
+        link(href='http://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
+        +style('/static/bower_components/materialize/dist/css/materialize.min.css')
+        +script("/static/bower_components/materialize/dist/js/materialize.min.js")
+        +script("/static/bower_components/angular-materialize/src/angular-materialize.js")
 
         +style("/static/build/app.css")
         +script("/static/build/app.js")
