--- a/src/donight/web/client/app/index.jade
+++ b/src/donight/web/client/app/index.jade
@@ -45,7 +45,7 @@ html(lang="en", ng-app="donight")
 
         +script("/static/bower_components/angular-read-more/dist/readmore.min.js")
 
-        link(href='http://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
+        link(href='https://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
         +style('/static/bower_components/materialize/dist/css/materialize.min.css')
         +script("/static/bower_components/materialize/dist/js/materialize.min.js")
         +script("/static/bower_components/angular-materialize/src/angular-materialize.js")
