Added ShowsAround to all scrapers, fixed a bug with long descriptions.

--- a/src/donight/web/client/app/index.jade
+++ b/src/donight/web/client/app/index.jade
@@ -9,8 +9,8 @@ html(lang="en", ng-app="donight")
         
         base(href="/")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(name="description", content="Search Stuff")
-        meta(name="author", content="cookiecutter.email")
+        meta(name="description", content="Events index")
+        meta(name="author", content="ehudhala")
 
         link(rel="apple-touch-icon", sizes="180x180", href="/static/icons/apple-touch-icon.png")
         link(rel="icon", type="image/png", href="/static/icons/favicon-32x32.png", sizes="32x32")
