--- a/src/donight/web/client/app/events/events.styl
+++ b/src/donight/web/client/app/events/events.styl
@@ -1,2 +1,9 @@
 a.navbar-brand
     border-bottom-color transparent !important
+
+.my-card-title
+    font-size 20px
+    font-weight 300
+
+.pointer-cursor
+    cursor pointer
