--- a/src/donight/web/client/app/skeleton/skeleton.styl
+++ b/src/donight/web/client/app/skeleton/skeleton.styl
@@ -3,7 +3,13 @@
   padding-left 10px
 
 #filter-button
-    padding 0 2rem
+  padding 0 2rem
+  cursor pointer
 
-ul.dropdown-content.active
-    max-height 2000px !important
+.right-icon
+  float right !important
+  margin-right 0 !important
+  margin-left 1rem !important
+
+li header
+  padding-right 2rem
